
next:
          - OMD:
            - add SELinux support for centos/rhel and fedora
            - add build support for Ubuntu 18.04 Bionic
            - add build support for Fedora 28
            - add WEB_ALIAS hook to define an url alias
            - add WEB_REDIRECT hook to enable redirect from / to /sitename
          - Naemon update to 1.0.8
          - InfluxDB: update to 1.6.4
            - add INFLUXDB_MODE hook to support ssl
          - Go update to 1.9.7
          - Go update to 1.10.4
          - Grafana update to 5.3.1
            - set default fill to none for influxdb datasource
          - Prometheus update to 2.4.3
          - Prometheus Pushgateway update to 0.5.2
          - Prometheus node_exporter update to 0.16.0
          - Prometheus Alertmanager update to 0.15.2
          - Icinga2 update to 2.9.2
            - add ido features (experimental)
            - add ido omd config hook (experimental)
          - Thruk:
            - update to 2.24
            - disable shinken features plugin in default installation
          - LMD: Update 1.3.5
          - Mod-Gearman: Update 3.0.6
            - add mod-gearman-worker-go

2.70     Mar 14 2018
          - OMD:
            - add LIVESTATUS_TCP_ONLY_FROM hook
            - add omd -p switch for parallel restart/reload/stop/start
            - add build support for Ubuntu 17.10 Artful
            - add build support for Fedora 27
          - Thruk: update to 2.20-2
          - NagVis update to 1.9.5
          - Prometheus update to 2.1.0
          - Prometheus blackbox_exporter update to 0.12.0
          - Prometheus node_exporter update to 0.15.2
          - Prometheus Alertmanager update to 0.13.0
          - Icinga2 update to 2.8.1
            - add omd_root and omd_site to constants.conf
          - InfluxDB: update to 1.4.2
          - Ansible: update to 2.3.3.0-1
          - Check_prometheus: added 0.0.1
          - Go: added 1.9.4
          - Go: added 1.10